ファイル名変更とそれぞれのhtmlファイルとcssのリンク
GitHub Pagesでの最初に開かれるファイルを指定するためにファイル名をweb.htmlからindex.htmlに変更

--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>csチーム演習グループ5</title>
+    <link rel="stylesheet" type="text/css" href="../css/soba.css">
+    <title>そば</title>
 </head>
 <body>
     
