--- a/categoryhtml/pasta.html
+++ b/categoryhtml/pasta.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../css/pasta.css">
     <title>パスタ</title>
 </head>
 <body>
