--- a/categoryhtml/ramen.html
+++ b/categoryhtml/ramen.html
@@ -2,7 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>そば</title>
+    <link rel="stylesheet" type="text/css" href="../css/ramen.css">
+    <title>ラーメン</title>
 </head>
 <body>
     
