--- a/categoryhtml/ramen.html
+++ b/categoryhtml/ramen.html
@@ -6,6 +6,21 @@
     <title>ラーメン</title>
 </head>
 <body>
-    
+    <div class="sidenav">
+        <a href="../index.html">ホーム</a>
+        <a href="./soba.html">そば</a>
+        <a href="./ramen.html">ラーメン</a>
+        <a href="./pasta.html">パスタ</a>
+    </div>
+    <div class="main-content">
+        <h2 id="section1">おすすめのラーメン紹介</h2>
+        <p>内容1</p>
+        <h2 id="section2">仮2</h2>
+        <p>内容2</p>
+        <h2 id="section3">仮3</h2>
+        <p>内容3</p>
+        <h2 id="section4">仮4</h2>
+        <p>内容4</p>
+    </div>
 </body>
 </html>
