説明、ランキング

--- a/categoryhtml/pasta.html
+++ b/categoryhtml/pasta.html
@@ -8,6 +8,20 @@
 <body>
     <h1>冷凍パスタ</h1>
     <h2>目次</h2>
+
+    <h3>冷凍パスタの説明</h3>
+
     <h3>冷凍パスタランキング</h3>
+    <h4>1位</h4>
+
+    <h4>2位</h4>
+
+    <h4>3位</h4>
+
+    <h4>4位</h4>
+    
+    <h4>5位</h4>
+
+    
 </body>
 </html>
