ある程度の表などの作成
簡単な表、目次、評価の欄を作った

--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -6,6 +6,19 @@
     <title>そば</title>
 </head>
 <body>
-    
+    <h1>冷凍そばのおすすめランキング</h1> 
+ <h2>目次</h2> 
+ <table>
+    <tr>
+    <th colspan="2">商品</th>
+    <th>画像</th>
+    <th>ポイント</th>
+    <th>詳細</th>
+    </tr>
+    <tr>
+        <th colspan="2">一位 aaaaa</th>
+        <td></td>
+    </tr>
+ </table>
 </body>
 </html>
