--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -7,18 +7,40 @@
 </head>
 <body>
     <h1>冷凍そばのおすすめランキング</h1> 
- <h2>目次</h2> 
+ <h2>目次
+
+ </h2> 
  <table>
     <tr>
-    <th colspan="2">商品</th>
+    <th>商品</th>
     <th>画像</th>
     <th>ポイント</th>
     <th>詳細</th>
     </tr>
     <tr>
-        <th colspan="2">一位 aaaaa</th>
+        <th>1位 aaaaa</th>
+        <th></th>
         <td></td>
     </tr>
+    <tr>
+        <th>2位aaaaa</th>
+    </tr>
+    <tr>
+        <th>3位aaaaa</th>
+    </tr>
+    <tr>
+        <th>4位aaaaa</th>
+    </tr>
+    <tr>
+        <th>5位aaaaa</th>
+    </tr>
  </table>
+<h3>冷凍そばの選び方</h3>
+    <ol>
+        <li>a</li>
+        <li>b</li>
+        <li>c</li>
+    </ol>
+
 </body>
 </html>
