indexの目次やcssの作成ramenファイルの大まかな枠組みの作成

--- a/categoryhtml/ramen.html
+++ b/categoryhtml/ramen.html
@@ -6,6 +6,9 @@
     <title>ラーメン</title>
 </head>
 <body>
+    <div class="image-container">
+        <img src="https://img01.jalannews.jp/img/2023/01/20230124_gotochi-ramen_17-670x443.jpg" alt="ラーメン画像">
+    </div>
     <div class="sidenav">
         <a href="../index.html">ホーム</a>
         <a href="./soba.html">そば</a>
