--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>csチーム演習グループ5</title>
 </head>
 <body>
-    <p>麺料理の美味しいお店&美味しいメーカー</p>
+    <div class="sidenav">
+        <a href="../index.html">ホーム</a>
+        <a href="./soba.html">そば</a>
+        <a href="./ramen.html">ラーメン</a>
+        <a href="./pasta.html">パスタ</a>
+    </div>
+    <div class="main-content">
+        <h2 id="section1">仮1</h2>
+        <p>内容1</p>
+        <h2 id="section2">仮2</h2>
+        <p>内容2</p>
+        <h2 id="section3">仮3</h2>
+        <p>内容3</p>
+        <h2 id="section4">仮4</h2>
+        <p>内容4</p>
+    </div>
     
 </body>
 </html>
