indexのリンク先のバグを修正

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="sidenav">
-        <a href="../index.html">ホーム</a>
-        <a href="./soba.html">そば</a>
-        <a href="./ramen.html">ラーメン</a>
-        <a href="./pasta.html">パスタ</a>
+        <a href="./index.html">ホーム</a>
+        <a href="./categoryhtml/soba.html">そば</a>
+        <a href="./categoryhtml/ramen.html">ラーメン</a>
+        <a href="./categoryhtml/pasta.html">パスタ</a>
     </div>
     <div class="main-content">
         <h2 id="section1">仮1</h2>
