--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>冷凍そばのおすすめランキング</h1> 
- <h2>目次
+  <h2>目次
 
- </h2> 
- <table>
+  </h2> 
+  <table>
     <tr>
     <th>商品</th>
     <th>画像</th>
@@ -35,12 +35,29 @@
         <th>5位aaaaa</th>
     </tr>
  </table>
-<h3>冷凍そばの選び方</h3>
+ <h3>冷凍そばの選び方</h3>
     <ol>
         <li>a</li>
         <li>b</li>
         <li>c</li>
     </ol>
+<h3>1位 ○○</h3>
+    <img src="">
+    <a href=""></a>
+    <h5>ポイントの一言</h5>
+    <p>説明</p>
+<h3>2位 ○○</h3>
+    <img src="">
+    <a href=""></a>
+    <h5>ポイントの一言</h5>
+    <p>説明</p>
+<h3>3位 ○○</h3>
+    <img src="">
+    <a href=""></a>
+    <h5>ポイントの一言</h5>
+    <p>説明</p>
+
+<h3>時短そば作りのコツ</h3>
 
 </body>
 </html>
