サイドナビの設計とラーメンの画像の配置

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="sidenav">
-        <a href="./index.html">ホーム</a>
+        <strong><a href="./index.html">ホーム</a></strong>
         <a href="./categoryhtml/soba.html">そば</a>
         <a href="./categoryhtml/ramen.html">ラーメン</a>
         <a href="./categoryhtml/pasta.html">パスタ</a>
