--- a/categoryhtml/ramen.html
+++ b/categoryhtml/ramen.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://img01.jalannews.jp/img/2023/01/20230124_gotochi-ramen_17-670x443.jpg" alt="ラーメン画像">
+        <img src="../img/ramen.jpg" alt="ラーメン画像">
     </div>
     <div class="sidenav">
-        <a href="../index.html">ホーム</a>
+        <strong><a href="../index.html">ホーム</a></strong>
         <a href="./soba.html">そば</a>
         <a href="./ramen.html">ラーメン</a>
         <a href="./pasta.html">パスタ</a>
