サイドボタンの作成

--- a/categoryhtml/pasta.html
+++ b/categoryhtml/pasta.html
@@ -6,7 +6,13 @@
     <title>パスタ</title>
 </head>
 <body>
-    <h1>冷凍パスタ</h1>
+    <div class="sidenav">
+        <strong><a href="../index.html">ホーム</a></strong>
+        <a href="./soba.html">そば</a>
+        <a href="./ramen.html">ラーメン</a>
+        <a href="./pasta.html">パスタ</a>
+    </div>
+    <h1>冷凍パスタのおすすめランキング</h1>
     <h2>目次</h2>
 
     <h3>冷凍パスタの説明</h3>
