サイドバーの追加

--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -6,6 +6,12 @@
     <title>そば</title>
 </head>
 <body>
+    <div class="sidenav">
+        <strong><a href="../index.html">ホーム</a></strong>
+        <a href="./soba.html">そば</a>
+        <a href="./ramen.html">ラーメン</a>
+        <a href="./pasta.html">パスタ</a>
+    </div>
     <h1>冷凍そばのおすすめランキング</h1> 
   <h2>目次
 
