文字の移動

--- a/categoryhtml/pasta.html
+++ b/categoryhtml/pasta.html
@@ -12,11 +12,31 @@
         <a href="./ramen.html">ラーメン</a>
         <a href="./pasta.html">パスタ</a>
     </div>
+    <div class="title">
     <h1>冷凍パスタのおすすめランキング</h1>
+    </div>
+
+    <div class="p">
     <h2>目次</h2>
+    <ul>
+        <li>冷凍パスタの種類、メーカー</li>
+        <li>冷凍パスタランキング</li>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+    </ul>
+    </div>
 
-    <h3>冷凍パスタの説明</h3>
+    <div class="ex">
+    <h3>冷凍パスタの種類、メーカー</h3>
+    <p></p>
+    </div>
 
+    <div class="ranking">
     <h3>冷凍パスタランキング</h3>
     <h4>1位</h4>
 
@@ -27,7 +47,7 @@
     <h4>4位</h4>
     
     <h4>5位</h4>
-
+    </div>
     
 </body>
 </html>
