--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -12,10 +12,11 @@
         <a href="./ramen.html">ラーメン</a>
         <a href="./pasta.html">パスタ</a>
     </div>
+    <div class="title">
     <h1>冷凍そばのおすすめランキング</h1> 
-  <h2>目次
-
-  </h2> 
+    </div>
+  <div class="mokuji">
+  <h2>目次</h2> 
   <table>
     <tr>
     <th>商品</th>
@@ -25,25 +26,31 @@
     </tr>
     <tr>
         <th>1位 国産そば粉の信州ざるそば</th>
-        <td><img src="https://resizer4.myct.jp/img/73249390584/paru soba.png"></td>
+        <td><img src="../img/soba palhontou syukusyou.png">pal-system</td>
+        <td>冷凍そばのクオリティを優に超える</td>        
     </tr>
     <tr>
         <th>2位 石臼挽き 信州そば３食</th>
-        <td><img src="https://resizer4.myct.jp/img/62283394277/isiyaki soba.jpg"></td>
+        <td><img src="../img/soba pal syukusyou.jpg">テーブルマーク</td>
+        <td>そばの香りを存分に楽しめる</td>
     </tr>
     <tr>
         <th>3位 冷凍 日清のどん兵衛 鴨南蛮そば</th>
-        <td><img src="https://resizer4.myct.jp/img/91838609396/nissin soba.jpg"></td>
+        <td><img src="../img/soba nissin syukusyou.jpg">日清</td>
+        <td>しっかりとしたコシとクオリティの高い鴨汁</td>
     </tr>
     <tr>
         <th>4位 上原農場の五割そば 3食入</th>
-        <td><img src="https://resizer4.myct.jp/img/49243618850/sebunn soba.jpg"></td>
+        <td><img src="../img/soba sebunn syukusyou.jpg">セブンイレブン</td>
+        <td>材料にこだわった上品な味</td>
     </tr>
     <tr>
         <th>5位 そば つゆ付</th>
-        <td><img src="https://resizer4.myct.jp/img/52027066150/roson soba.png"></td>
+        <td><img src="../img/soba roson syukusyou.png">ローソン</td>
+        <td>素朴な味わいで食べやすい</td>
     </tr>
  </table>
+</div>
  <h3>冷凍そばの選び方</h3>
     <ol>
         <p>客観的に評価するためにいくつかの項目を用意</p>
