--- a/categoryhtml/ramen.html
+++ b/categoryhtml/ramen.html
@@ -6,14 +6,33 @@
     <title>ラーメン</title>
 </head>
 <body>
-    <div class="image-container">
+    <!-- <div class="image-container">
+        <h1 class="image-title">美味しいラーメン</h1>
         <img src="../img/ramen.jpg" alt="ラーメン画像">
-    </div>
+    </div> -->
     <div class="sidenav">
         <strong><a href="../index.html">ホーム</a></strong>
         <a href="./soba.html">そば</a>
         <a href="./ramen.html">ラーメン</a>
         <a href="./pasta.html">パスタ</a>
+    </div>
+    <div class="about">
+        <h1>About</h1>
+        <p>このサイトは、ラーメン屋ランキング紹介ページです。おすすめのラーメン屋を味、サービス、雰囲気などを評価し、ベストなラーメンスポットを紹介しています。</p>
+        <ul>
+            <li>
+                <strong>目的</strong>
+                <p>このサイトの目的は、ラーメンをもっと皆さんに好きになってもらい、このサイトを通して最高のラーメン体験を提供することです。新しいお店の発見や味の違いを楽しむ手助けができることを願っています！！</p>
+            </li>
+            <li>
+                <strong>ランキングの方法</strong>
+                <p>このランキングは完全に自分の好みです。もしこのランキング以外でおすすめのラーメン屋があれば是非おしえてください！！</p>
+            </li>
+        </ul>
+        <hr>
+    </div>
+    <div class="index">
+        <h1>index</h1>
     </div>
     <div class="main-content">
         <h2 id="section1">おすすめのラーメン紹介</h2>
