--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -86,6 +86,7 @@
     <img src="../img/3.jpg">
     <a href=""></a>
     <h3>そばはもちろん、特に付属が至高の一品</h3>
+    <p>この商品は上の二つとは違い、付属としてつゆや、具材が入っていますがそれがとてもおいしいです。とてもあじわい深いつゆの中に、炭火焼された鴨肉やネギが入っていてうま味があふれています。そして、つゆの味は強いものの、そばの麺としてもコシがあったり、のどごしがよかったりと存在感がありつゆとともにおいしいと感じました。</p>
 </div>
 <div class="kotu">
 <h3>時短そば作りのコツ</h3>
