（仮）目次、表のCSSデザインコピペ

--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -17,7 +17,14 @@
     </div>
   <div class="mokuji">
   <h2>目次</h2> 
-  <table>
+  <div class="contents_box">この記事の目次 
+    <input id="display" type="checkbox" /><label for="display"></label>
+    <div class="hidden_show">
+    <p>[:内容]</p>
+    </div>
+    </div>
+  <div class="table-wrap">
+  <table class="table">
     <tr>
     <th>商品</th>
     <th>画像</th>
@@ -27,7 +34,8 @@
     <tr>
         <th>1位<a href="#link1">国産そば粉の信州ざるそば</a></th>
         <td><img src="../img/soba palhontou syukusyou.png">pal-system</td>
-        <td>冷凍そばのクオリティを優に超える</td>        
+        <td>冷凍そばのクオリティを優に超える</td> 
+        <td>価格 電子レンジの有無 内容量</td>       
     </tr>
     <tr>
         <th>2位<a href="#link2">石臼挽き 信州そば３食</a></th>
@@ -50,6 +58,7 @@
         <td>素朴な味わいで食べやすい</td>
     </tr>
  </table>
+</div>
 </div>
 
 <div class="hyouka">
