--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -98,7 +98,22 @@
     <p>この商品は上の二つとは違い、付属としてつゆや、具材が入っていますがそれがとてもおいしいです。とてもあじわい深いつゆの中に、炭火焼された鴨肉やネギが入っていてうま味があふれています。そして、つゆの味は強いものの、そばの麺としてもコシがあったり、のどごしがよかったりと存在感がありつゆとともにおいしいと感じました。</p>
 </div>
 <div class="kotu">
-<h3>時短そば作りのコツ</h3>
+<h3>""速ければ３分""時短そば作りのコツ（狐蕎麦もどき）</h3>
+<h5>推奨する人たち</h5>
+<p>三食全部は基本推奨しない（蕎麦がある程度好きで、ごはんつくるのがめんどうで、健康とかあまり気にしていないけどカップ麺は健康に悪そうだと思って食べれない人にはおすすめ）</p>
+<h5>用意するもの</h5>
+<ul>
+    <li>レンジで温められる冷凍そば(ランキング１位がおすすめ)</li>
+    <li>あらかじめ刻んで冷凍したネギ(ジップロックを使うと〇)</li>
+    <li>好みの薄めるつゆ(値段が高めのつゆがおすすめ)</li>
+    <li>袋に入っている振りかける刻んだ味しみ油揚げ(売ってる)</li>
+    <li>ある程度大きいそばを入れる器(いくつかあると便利)</li>
+    <li>電気ポットまたはレンチンの時間より早く沸き終わるポットなど</li>
+    <li>(できれば)火力が強めの電子レンジ</li>
+    <li>(できれば)冷凍そばをたくさんストックできる冷凍庫</li>
+</ul>
+<h5>手順や説明</h5>
+<p>調理の9割を電子レンジの温める時間が占めているため、ここを時短できればできるほど早く作ることができます。流れとしては、お皿に乗せ温める➡その間につゆ、油揚げを手元の用意➡でき次第、それをかけネギを取り出しかけ、電気ポットのお湯をかける、です。何度も作るにつれてお湯の量を把握しちょうどいい量をすぐに注げるようになります。つゆはとても大事なので適当に選ばないほうがいいです。健康にいいのかはわかりませんが、消化はいいし、なんとなく作った感があるので健康に良さそうな気がします。ぜひ作ってみてください。</p>
 </div>
 </body>
 </html>
