アマゾンへのリンク追加、目次の下のラインや、横のライン追加、写真追加、ランキングのカラー追加、表と目次作成、リンクの色調整

--- a/categoryhtml/soba.html
+++ b/categoryhtml/soba.html
@@ -20,7 +20,13 @@
   <div class="contents_box">この記事の目次 
     <input id="display" type="checkbox" /><label for="display"></label>
     <div class="hidden_show">
-    <p>[:内容]</p>
+    <ul>
+        <li><a class="irokesi" href="#mokuji_1">冷凍そばの選び方</a></li>
+        <li><a class="irokesi" href="#mokuji_2">ランキング 第１位</a></li>
+        <li><a class="irokesi" href="#mokuji_3">ランキング 第２位</a></li>
+        <li><a class="irokesi" href="#mokuji_4">ランキング 第３位</a></li>
+        <li><a class="irokesi" href="#mokuji_5">時短そば作りのコツ</a></li>
+    </ol>
     </div>
     </div>
   <div class="table-wrap">
@@ -29,78 +35,101 @@
     <th>商品</th>
     <th>画像</th>
     <th>ポイント</th>
-    <th>詳細</th>
+    <th>価格 内容量(一個あたり)</th>
+    <th>電子レンジでの温め</th>
     </tr>
     <tr>
-        <th>1位<a href="#link1">国産そば粉の信州ざるそば</a></th>
+        <th>1位<a class="irokesi" href="#link1">国産そば粉の信州ざるそば</a></th>
         <td><img src="../img/soba palhontou syukusyou.png">pal-system</td>
         <td>冷凍そばのクオリティを優に超える</td> 
-        <td>価格 電子レンジの有無 内容量</td>       
+        <td>130円 200g</td>
+        <td>○</td>      
     </tr>
     <tr>
-        <th>2位<a href="#link2">石臼挽き 信州そば３食</a></th>
+        <th>2位<a class="irokesi" href="#link2">石臼挽き 信州そば３食</a></th>
         <td><img src="../img/soba pal syukusyou.jpg">テーブルマーク</td>
         <td>そばの香りを存分に楽しめる</td>
+        <td>170円 160g</td>
+        <td>○</td>  
     </tr>
     <tr>
-        <th>3位<a href="#link3">冷凍 日清のどん兵衛 鴨南蛮そば</a></th>
+        <th>3位<a class="irokesi" href="#link3">冷凍 日清のどん兵衛 鴨南蛮そば</a></th>
         <td><img src="../img/soba nissin syukusyou.jpg">日清</td>
         <td>しっかりとしたコシとクオリティの高い鴨汁</td>
+        <td>328円 171g</td>
+        <td>○</td>
     </tr>
     <tr>
         <th>4位 上原農場の五割そば 3食入</th>
         <td><img src="../img/soba sebunn syukusyou.jpg">セブンイレブン</td>
         <td>材料にこだわった上品な味</td>
+        <td>約140円 160g</td>
+        <td>○</td>
     </tr>
     <tr>
         <th>5位 そば つゆ付</th>
         <td><img src="../img/soba roson syukusyou.png">ローソン</td>
         <td>素朴な味わいで食べやすい</td>
+        <td>138円 216g</td>
+        <td>○</td>
     </tr>
  </table>
 </div>
 </div>
 
 <div class="hyouka">
- <h3>冷凍そばの選び方</h3>
+ <h3 class="sidebar" id="mokuji_1">冷凍そばの選び方</h3>
     <ol>
         <p>客観的に評価するためにいくつかの項目を用意</p>
         <li>麺のうま味や甘み</li>
+        <img src="../img/sobako syukusyou.jpg">
         <p>当たり前ですが、麺本来の味はとても大切です。原料は同じだとしてもおいしいそばと、そうでないそばではうま味や甘みの部分に大きな差が出ることがあり、おいしさを決める上で大事な要素です。</p>
         <li>そばの「香り」</li>
-        <p></p>
+        <img src="../img/sobanomi syukusyou.jpg">
         <p>麺の味自体に実はとても影響を与えているのが、この香りです。香りによって、うま味や甘みを何倍にも増強させることがわかっています。よって、食べたときに口の中に広がったり、鼻に抜けたりするそばの香りは麺の味と同じくらい大事な要素といえそうです。</p>
         <li>麺の「コシ」</li>
+        <img src="../img/yude syukusyou.jpeg">
         <p>おすすめの冷凍そばを決めるうえで、とてもはっきりしていたのがこのコシです。しっかりと弾力があるか、パサパサしすぎていないかはおいしいそばと感じるうえでとても大切です。</p>
         <li>麺の「のど越し」</li>
+        <img src="../img/sobamotiage syukusyou.jpg">
         <p>言葉はよく聞いたことがあるけど、あまりよく知らない人が多そうなのがこののど越しです。解釈の仕方などがいろいろあるかもしれませんが、ツウな人はあまり噛まずにそばを食べて、こののど越しを味わっているそうです。そこまでいかなくても、飲み込んだ時ののどをつるんと通る感覚はおいしいそばを決めるうえで実は大事な要素なのかもしれません。</p>
     </ol>
 </div>
-<div class="rank1">
-<h3 id="link1">1位 国産そば粉の信州ざるそば(pal system)</h3>
+<div class="rank1" id="mokuji_2">
+<h3 class="rankcolor1" id="link1">1位</h3><h3>国産そば粉の信州ざるそば(pal system)</h3>
     <img src="../img/1.png">
     <a href=""></a>
     <h3>他を圧倒するクオリティ</h3>
     <p>上の評価基準のすべてにおいて、ほかの冷凍そばを寄せ付けないクオリティを持っていると思います。特に、「コシ」については初めてこのそばを食べたときから、「もうこれ以外の冷凍そばは食べれないかも」と思うほどにしっかりしていると感じたので、おいしく食べられると思います。</p>
+    <div class="button">
+        <a href="https://item.pal-system.co.jp/frozen-food/kokusansobako_zarusoba/">pal-systemで見る</a>
+    </div>
 </div>
-<div class="rank2">
-<h3 id="link2">2位 石臼挽き 信州そば３食（テーブルマーク）</h3>
+<div class="rank2" id="mokuji_3">
+<h3 class="rankcolor2" id="link2">2位</h3> <h3>石臼挽き 信州そば３食（テーブルマーク）</h3>
     <img src="../img/2.jpg">
     <a href=""></a>
     <h3>風味豊かな石臼挽きのそば</h3>
     <p>このそばの特長は、とても深いそばの香りを楽しめるところです。一位のそばよりも香りとしては深いような気がしたので、そこを意識する人はこっちを買うといいかもしれません。その他、麺のコシなど、確かに１位には劣るものの、冷凍そばとしてはかなり良くできていると思うので問題なくおいしく食べられると思います。</p>
+    <div class="button">
+        <a href="https://www.amazon.co.jp/%E5%86%B7%E5%87%8D-%E3%83%86%E3%83%BC%E3%83%96%E3%83%AB%E3%83%9E%E3%83%BC%E3%82%AF-%E7%9F%B3%E8%87%BC%E6%8C%BD%E3%81%8D%E4%BF%A1%E5%B7%9E%E3%81%9D%E3%81%B0-3%E9%A3%9F%EF%BC%88%E3%83%9E%E3%83%AB%E3%83%81PKG%EF%BC%89-480g%C3%976%E8%A2%8B/dp/B0B2PR1JHP/ref=sr_1_15?dib=eyJ2IjoiMSJ9.1R1_dStHOLMz6S968-vplL2Lq8YZ_LJb16GO7f-owuR3rpEWmIZgzldETMSDljaI6Y7iVtVmkp_xq4pjZeKYwO8hH73Z_8Po6jfDM6tth5_YRjZP9OIGDkbXVgU9TZNdz7mv5ChXknuG9w-_DUNllmSqBAP14OGrKRsS2WOvqO1vGVPXB3C5j7r7lhai2jEGkMwrURKf0sKEi0U0cmuAOiyYWVIKbB47gRx4_xVUnCsgsk3D3JetYieQsZzwhjUIOKEX2E_DArA9VLMPXEoMkw10iVxhV3bjLYu_cggBpWo.NOj6Y_T7eWBtEpsBFM3If5OcKZYnVN5ifoRTqO4qcEA&dib_tag=se&keywords=%E5%86%B7%E5%87%8D%E3%81%9D%E3%81%B0&qid=1719723791&sr=8-15">amazonで見る</a>
+    </div>
 </div>
-<div class="rank3">
-<h3 id="link3">3位 冷凍 日清のどん兵衛 鴨南蛮そば（日清）</h3>
+<div class="rank3" id="mokuji_4">
+<h3 class="rankcolor3" id="link3">3位</h3><h3>冷凍 日清のどん兵衛 鴨南蛮そば（日清）</h3>
     <img src="../img/3.jpg">
     <a href=""></a>
     <h3>そばはもちろん、特に付属が至高の一品</h3>
     <p>この商品は上の二つとは違い、付属としてつゆや、具材が入っていますがそれがとてもおいしいです。とてもあじわい深いつゆの中に、炭火焼された鴨肉やネギが入っていてうま味があふれています。そして、つゆの味は強いものの、そばの麺としてもコシがあったり、のどごしがよかったりと存在感がありつゆとともにおいしいと感じました。</p>
+    <div class="button">
+        <a href="https://www.amazon.co.jp/%E5%86%B7%E5%87%8D-%E6%97%A5%E6%B8%85%E9%A3%9F%E5%93%81-%E6%97%A5%E6%B8%85%E3%81%AE%E3%81%A9%E3%82%93%E5%85%B5%E8%A1%9B-%E9%B4%A8%E5%8D%97%E8%9B%AE%E3%81%9D%E3%81%B0-242g/dp/B0BFBB37CD/ref=sr_1_23_f3_0o_fs?dib=eyJ2IjoiMSJ9.1R1_dStHOLMz6S968-vplL2Lq8YZ_LJb16GO7f-owuR3rpEWmIZgzldETMSDljaI6Y7iVtVmkp_xq4pjZeKYwO8hH73Z_8Po6jfDM6tth5_YRjZP9OIGDkbXVgU9TZNdz7mv5ChXknuG9w-_DUNllmSqBAP14OGrKRsS2WOvqO1vGVPXB3C5j7r7lhai2jEGkMwrURKf0sKEi0U0cmuAOiyYWVIKbB47gRx4_xVUnCsgsk3D3JetYieQsZzwhjUIOKEX2E_DArA9VLMPXEoMkw10iVxhV3bjLYu_cggBpWo.NOj6Y_T7eWBtEpsBFM3If5OcKZYnVN5ifoRTqO4qcEA&dib_tag=se&keywords=%E5%86%B7%E5%87%8D%E3%81%9D%E3%81%B0&qid=1719724070&sr=8-23">amazonで見る</a>
+    </div>
 </div>
 <div class="kotu">
-<h3>""速ければ３分""時短そば作りのコツ（狐蕎麦もどき）</h3>
+<h3 class="sidebar" id="mokuji_5">""速ければ３分""時短そば作りのコツ（狐蕎麦もどき）</h3>
 <h5>推奨する人たち</h5>
-<p>三食全部は基本推奨しない（蕎麦がある程度好きで、ごはんつくるのがめんどうで、健康とかあまり気にしていないけどカップ麺は健康に悪そうだと思って食べれない人にはおすすめ）</p>
+<p>三食全部は基本推奨しない</p>
+<p>（蕎麦がある程度好きで、ごはんつくるのがめんどうで、健康とかあまり気にしていないけどカップ麺は健康に悪そうだと思って食べれない人にはおすすめ）</p>
 <h5>用意するもの</h5>
 <ul>
     <li>レンジで温められる冷凍そば(ランキング１位がおすすめ)</li>
@@ -113,7 +142,10 @@
     <li>(できれば)冷凍そばをたくさんストックできる冷凍庫</li>
 </ul>
 <h5>手順や説明</h5>
-<p>調理の9割を電子レンジの温める時間が占めているため、ここを時短できればできるほど早く作ることができます。流れとしては、お皿に乗せ温める➡その間につゆ、油揚げを手元の用意➡でき次第、それをかけネギを取り出しかけ、電気ポットのお湯をかける、です。何度も作るにつれてお湯の量を把握しちょうどいい量をすぐに注げるようになります。つゆはとても大事なので適当に選ばないほうがいいです。健康にいいのかはわかりませんが、消化はいいし、なんとなく作った感があるので健康に良さそうな気がします。ぜひ作ってみてください。</p>
+<p>調理の9割を電子レンジの温める時間が占めているため、ここを時短できればできるほど早く作ることができます。</p>
+<p>流れとしては、お皿に乗せ温める➡その間につゆ、油揚げを手元の用意➡でき次第、それをかけネギを取り出しかけ、電気ポットのお湯をかける、です。</p>
+<p>何度も作るにつれてお湯の量を把握しちょうどいい量をすぐに注げるようになります。つゆはとても大事なので適当に選ばないほうがいいです。</p>
+<p>健康にいいのかはわかりませんが、消化はいいし、なんとなく作った感があるので健康に良さそうな気がします。ぜひ作ってみてください。</p>
 </div>
 </body>
 </html>
